# internal/swaggerdocs/swagger.json
@@ -1083,16 +1083,31 @@
                 "has_updated": {
                     "type": "boolean"
                 },
+                "host": {
+                    "type": "string"
+                },
+                "last_seen_at": {
+                    "type": "string"
+                },
                 "leased": {
                     "type": "integer"
                 },
+                "online": {
+                    "type": "boolean"
+                },
                 "running": {
                     "type": "integer"
+                },
+                "status": {
+                    "type": "string"
                 },
                 "task_count": {
                     "type": "integer"
                 },
                 "updated_at": {
+                    "type": "string"
+                },
+                "version": {
                     "type": "string"
                 },
                 "worker_id": {
